# stacuist.com

./: .gitignore  BUILD.bazel  CMakeLists.txt  Cargo.toml  README.md  WORKSPACE.bazel  db.sql  deploy.sh  dev.sh  main.cc  run.sh  system.BUILD
db/: BUILD.bazel  CMakeLists.txt  init_db.py  recipes_to_sql.py
db/recipes/: buzara  crnirizot  fajitas  flekiceskupuson  gravcenatavce  jajenaoko  krafne  lentilcurry  musaka  pasticada  pecena_kokos  pilav  pulpogallega  riba  salmorejo  sarma  tartarbiftek  tikkamasala
engine/: BUILD.bazel  CMakeLists.txt  Makefile  cmake_install.cmake  model.cc  model.h  recipe.h
old_version/: BUILD.bazel  WORKSPACE.bazel  dev.sh
old_version/db/: db.sql
old_version/db/recipes/: bobimanistra  buzara  flekiceskupuson  lentilcurry  pasticada  pecena_kokos  rizot  salmorejo
old_version/resources/: wt_config.xml
old_version/web/: query.h  recipe_view.cc  recipe_view.h  tags.h
recipes/: babinacorba  boeufbourguignon  bublice  chanamasala  coqauvin  crnirizot  fajitas  musaka  pulpogallega  punjenepaprike  riba  sarma  tikkamasala
resources/style/: main.css
rocket/: Cargo.toml
rocket/src/: main.rs  recipe.rs  template.rs
rocket/templates/: recipe.hbs
src/: main.rs  recipe.rs
templates/: recipe.hbs  recipe.html.hbs  search.html.hbs
web/: BUILD.bazel  CMakeLists.txt  app.cc  app.h  query.cc  recipe_view.cc  recipe_view.h  tags.cc  tags.h
