load("@rules_pkg//:pkg.bzl", "pkg_deb", "pkg_tar")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = [
        "//web:app",
        "@system//:wt",
        "@system//:wtfcgi",
    ],
)

cc_binary(
    name = "main_dev",
    srcs = ["main.cc"],
    deps = [
        "//web:app",
        "@system//:wt",
        "@system//:wthttpd",
    ],
)


pkg_tar(
    name = "stacuist_webapp",
    srcs = [
        ":resources",
        ":web_resources",
        ":main",
        "//db:gendb",
    ],
    package_file_name = "stacuist.com.tar",
)
