[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
indexmap = "1.8.0"
rand = "0.8.4"
log = "0.4"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["handlebars_templates", "serve"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
