[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
indexmap = "1.8.0"
rand = "0.8.4"
log = "0.4"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }

[dependencies.serde]
version = "1.0"
features = ["derive"]
