package(default_visibility = ["//visibility:public"])

cc_library(
    name = "app",
    srcs = ["app.cc"],
    hdrs = ["app.h"],
    deps = [
        ":query",
        ":recipe_view",
        ":tags",
        "//engine:recipe",
        "@system//:wt",
        "@boost//:thread",
        "@boost//:system",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/random",
        "@com_google_absl//absl/algorithm",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status:statusor",
    ],
)


cc_library(
    name = "recipe_view",
    srcs = ["recipe_view.cc"],
    hdrs = ["recipe_view.h"],
    deps = [
        "@system//:wt",
        "//engine:recipe",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/random",
    ],
)

cc_library(
    name = "tags",
    srcs = ["tags.cc"],
    hdrs = ["tags.h"],
    deps = [
        "@system//:wt",
        "//engine:recipe",
        "@com_google_absl//absl/types:span",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/synchronization",
    ],
)

cc_library(
    name = "query",
    srcs = ["query.cc"],
    hdrs = ["query.h"],
    deps = [
        "@system//:wt",
        "//engine:recipe",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
    ],
)
